--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "@dhis2/d2-ui-legend",
   "version": "5.0.0",
   "description": "Legend component for DHIS2",
-  "main": "./build/cjs/index.js",
-  "module": "./build/es/index.js",
+  "main": "./cjs/index.js",
+  "module": "./es/index.js",
   "license": "BSD-3-Clause",
   "peerDependencies": {
     "d2": "^31.1.1",
