--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "@dhis2/d2-ui-legend",
-  "version": "5.0.1",
   "description": "Legend component for DHIS2",
   "main": "./index.js",
   "module": "./index.js",
@@ -24,9 +23,9 @@
     "test-ci": "jest --config=../../jest.config.js packages/legend"
   },
   "dependencies": {
-    "@dhis2/d2-ui-core": "5.0.1",
-    "@dhis2/d2-ui-forms": "5.0.1",
-    "@dhis2/d2-ui-table": "5.0.1",
+    "@dhis2/d2-ui-core": "5.0.3",
+    "@dhis2/d2-ui-forms": "5.0.3",
+    "@dhis2/d2-ui-table": "5.0.3",
     "babel-runtime": "^6.26.0",
     "d2-utilizr": "^0.2.15",
     "material-ui": "^0.20.0",
@@ -41,5 +40,6 @@
   },
   "publishConfig": {
     "access": "public"
-  }
+  },
+  "version": "5.0.3"
 }
