--- a/package.json
+++ b/package.json
@@ -18,15 +18,15 @@
   ],
   "scripts": {
     "prebuild": "npm run lint && rimraf ./build/*",
-    "build": "cross-env BABEL_ENV=es babel src --out-dir build --ignore spec.js",
+    "build": "babel src --out-dir build --ignore spec.js",
     "lint": "eslint src/",
     "watch": "npm run build --  --watch",
     "test-ci": "jest --config=../../jest.config.js packages/legend"
   },
   "dependencies": {
-    "@dhis2/d2-ui-core": "5.1.0",
-    "@dhis2/d2-ui-forms": "5.1.0",
-    "@dhis2/d2-ui-table": "5.1.0",
+    "@dhis2/d2-ui-core": "5.3.1",
+    "@dhis2/d2-ui-forms": "5.3.1",
+    "@dhis2/d2-ui-table": "5.3.1",
     "babel-runtime": "^6.26.0",
     "d2-utilizr": "^0.2.15",
     "material-ui": "^0.20.0",
@@ -42,6 +42,6 @@
   "publishConfig": {
     "access": "public"
   },
-  "version": "5.1.0",
+  "version": "5.3.1",
   "private": false
 }
